# CyBroLog

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
benchmarks/: ACTIVATION_REPORT.json
cybrolog/: __init__.py  cli.py  codec.py  parser.py  validator.py
docs/: DAILY_IMPROVEMENT_PROTOCOL.md  EXECUTABLE_DIALECT.md  MORPHOLOGY_SEMANTICS.md  RESEARCH_QUEUE.md  SYNOPSIS.md  SYNOPSIS_RU.md  SYNTAX.md  TECHNICAL.md
examples/: LIVING_A2A_EXCERPT.md  MULTI_AGENT.md  SYNTAX_EXAMPLES.md
spec/: CYBRILOG_SPEC_v2_2.md  CYBROLOG_SPEC_v2_2.md  cybrilog_sisters_review_instructions_v2_2_full.md  cybrilog_v2_2_megacontext_caveman_upgrade.md  cybrolog_sisters_review_instructions_v2_2_full.md  cybrolog_v2_2_megacontext_caveman_upgrade.md
tests/: test_cybrolog_v22.py
